plugins {
    id 'org.springframework.boot' version '2.4.0'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
}

group = 'self.ed'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

ext {
    set('springBootAdminVersion', "2.3.1")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'de.codecentric:spring-boot-admin-starter-client'
    implementation 'de.codecentric:spring-boot-admin-starter-server'

    implementation 'org.springframework.boot:spring-boot-devtools' //developmentOnly

    implementation 'org.springframework.hateoas:spring-hateoas:1.2.1'

    implementation 'io.github.benas:random-beans:3.9.0'
    implementation 'org.apache.commons:commons-lang3:3.11'
    implementation 'org.postgresql:postgresql:42.2.18'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'

    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo'

    // To use non-reactive MongoTemplate for test data preparation/verification
    testImplementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'io.projectreactor:reactor-test'

    testImplementation 'com.h2database:h2:1.4.200'
    // Another types of in-memory databases supported
    // testImplementation 'org.hsqldb:hsqldb:2.5.1'
    // testImplementation 'org.apache.derby:derby:10.15.2.0'
    testImplementation 'org.dbunit:dbunit:2.7.0'
    testImplementation 'org.testng:testng:7.3.0'
    testImplementation 'com.github.springtestdbunit:spring-test-dbunit:1.3.0'
    testImplementation 'com.ninja-squad:DbSetup:2.1.0'
}

dependencyManagement {
    imports {
        mavenBom "de.codecentric:spring-boot-admin-dependencies:${springBootAdminVersion}"
    }
}

test {
    useJUnitPlatform()
}

bootJar {
    excludeDevtools = false
}